--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -17,6 +17,4 @@ jobs:
           xl_label: "size/xl"
           fail_if_xl: "false"
           message_if_xl: >
-            This PR exceeds the recommended size of 1000 lines.
-            Please make sure you are NOT addressing multiple issues with one PR.
-            Note this PR might be rejected due to its size.
+            This PR exceeds the recommended size of 1000 lines. Please split it.
