--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -14,7 +14,5 @@ jobs:
           s_max_size: "100"
           m_max_size: "500"
           l_max_size: "1000"
-          xl_label: "size/xl"
           fail_if_xl: "false"
-          message_if_xl: >
-            This PR exceeds the recommended size of 1000 lines. Please split it.
+          message_if_xl: "This PR exceeds the recommended size of 1000 lines. Please split it."
