--- a/.github/workflows/generate-proto.yaml
+++ b/.github/workflows/generate-proto.yaml
@@ -12,15 +12,16 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Setup Go
         uses: actions/setup-go@v4
         with:
           go-version: "1.21"
 
-      - name: Run code generation and commit
+      - name: Install dependencies and run code generation
         run: |
+          go mod download
           make generate
           git config user.name "GitHub Actions"
           git config user.email "actions@github.com"
